--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main>
     <h1>Click on the buttons to see the functions in action:</h1>
     <button onclick='confirmEndingHandler()'>Confirm Ending</button> <br>
-    <button onclick='convertToCelsiusHandler()'>Convert to Celsius</button> <br>
+    <button onclick='convertToCHandler()'>Convert to Celsius</button> <br>
     <button onclick='convertToFahrenheitHandler()'>Convert to Fahrenheit</button> <br>
     <button onclick='findLongestWordLengthHandler()'>Find Longest Word Length</button> <br>
     <button onclick='repeatStringNumTimesHandler()'>Repeat String Number Times</button>
@@ -42,14 +42,20 @@
       <div class="img-box">
         <img src="img/red.jpg" alt="Astronaut watering the plant in space" width="1200" height="800">
       </div>
+      <div class='convertToC'>
+        <button onclick='convertToCHandler()'>Convert to Celsius </button>
+      </div>
+      <div class='convertTof'>
+        <button onclick='convertToFahrenheitHandler()'>Convert to Fahrenheit</button>
+      </div>
       <form class="form-find" action="">
         <input id="input-longest1" type="text" placeholder=" Enter a Quote or a Sentence">
-        <input type="input-longest2" type="text" placeholder="Write many lettrs in the longest"> 
+        <input type="input-longest2" type="text" placeholder="Write many letters in the longest">
       </form>
     </div>
-      <div class="div-button-longest">
-        <button class="button-longest" onclick="findLongestWordLengthHandler()">Enter</button>
-      </div>
+    <div class="div-button-longest">
+      <button class="button-longest" onclick="findLongestWordLengthHandler()">Enter</button>
+    </div>
   </section>
 </body>
 
