Fixing the bugs of the project This closes #8

--- a/index.html
+++ b/index.html
@@ -22,41 +22,16 @@
 
 
   <main>
+    <section>
     <h1>Click on the buttons to see the functions in action:</h1>
     <button onclick='confirmEndingHandler()'>Confirm Ending</button> <br>
     <button onclick='convertToCHandler()'>Convert to Celsius</button> <br>
     <button onclick='convertToFahrenheitHandler()'>Convert to Fahrenheit</button> <br>
     <button onclick='findLongestWordLengthHandler()'>Find Longest Word Length</button> <br>
-    <button onclick='repeatStringNumTimesHandler()'>Repeat String Number Times</button>
+    <button onclick='repeatStringNumTimesHandler()'>Repeat String Number Times</button> <br>
     <button onclick='reverseStringHandler()'>Reverse a String</button>
+    </section>
   </main>
-
-
-  <!--longest-fnd users part-->
-  <section id="private-main">
-    <div class="find-longest">
-      <div>
-        <h1>Red Planet</h1>
-        <p>let us explore red planet if it supports the life on it or not </p>
-      </div>
-      <div class="img-box">
-        <img src="img/red.jpg" alt="Astronaut watering the plant in space" width="1200" height="800">
-      </div>
-      <div class='convertToC'>
-        <button onclick='convertToCHandler()'>Convert to Celsius </button>
-      </div>
-      <div class='convertTof'>
-        <button onclick='convertToFahrenheitHandler()'>Convert to Fahrenheit</button>
-      </div>
-      <form class="form-find" action="">
-        <input id="input-longest1" type="text" placeholder=" Enter a Quote or a Sentence">
-        <input type="input-longest2" type="text" placeholder="Write many letters in the longest">
-      </form>
-    </div>
-    <div class="div-button-longest">
-      <button class="button-longest" onclick="findLongestWordLengthHandler()">Enter</button>
-    </div>
-  </section>
 </body>
 
 </html>
